# AI-Service-Backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyvenv.cfg
.github/workflows/: checks.yml  deploy.yml
app/: locustfile.py  manage.py  test.sh
app/apps/ad/: apps.py
app/apps/ai/: apps.py  models.py  serializers.py  service.py  test_real_api.py  tests.py  urls.py  utils.py  views.py
app/apps/ai/migrations/: 0001_initial.py
app/apps/food/: apps.py  models.py  tests.py
app/apps/food/migrations/: 0001_initial.py
app/apps/log/: models.py  serializers.py  tests.py  urls.py  views.py
app/apps/log/migrations/: 0001_initial.py  0002_alter_activitylog_action.py  0002_rename_activity_lo_user_id_f9e1c8_idx_log_activit_user_id_fb88fa_idx_and_more.py
app/apps/point/: apps.py
app/apps/report/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
app/apps/report/migrations/: 0001_initial.py  0002_rename_report_user_id_ef95fe_idx_report_repo_user_id_c947f1_idx_and_more.py
app/apps/user/: apps.py  models.py  serializers.py  social_view.py  tests.py  urls.py  views.py
app/apps/user/migrations/: 0001_initial.py
app/apps/user/migrations/__MACOSX/: ._migrations
app/apps/user/migrations/migrations/: 0001_initial.py
app/apps/utils/: authentication.py  jwt_blacklist.py  jwt_cache.py  pagination.py  redis_block.py  signals.py
app/config/settings/: base.py  dev.py  prod.py
app/config/urls/: base_urls.py  local_url.py  urls.py
app/utils/: authentication.py  jwt_blacklist.py  jwt_cache.py
nginx/: nginx.conf
(+2 files in other folders)
